spade-tests/src/snapshots/spade_tests__ports_integration__assigning_ports_to_ports_is_disallowed.snap
---
source: spade-tests/src/ports_integration.rs
---
entity not_allowed(a: ~& (&bool, &bool), b: (&bool, &bool)) -> bool {
    set a = b;
    true
}


error: Cannot create a wire of ports
  ┌─ testinput:1:24
  │
1 │ entity not_allowed(a: ~& (&bool, &bool), b: (&bool, &bool)) -> bool {
  │                        ^^^^^^^^^^^^^^^^
  │                        │ │
  │                        │ Because this is a port
  │                        This cannot be a wire
